--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sudoku",
+  "name": "pool",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "canvas-confetti": "^1.9.3",
-    "@worldcoin/minikit-react": "^1.9.7",
     "@worldcoin/minikit-js": "^1.6.0",
+    "@worldcoin/minikit-react": "^1.9.7",
     "next": "15.4.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
