--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uniswap/sdk-core": "^7.7.2",
+    "@uniswap/universal-router-sdk": "^4.19.7",
+    "@uniswap/v4-sdk": "^1.21.4",
     "@worldcoin/minikit-js": "^1.6.0",
     "@worldcoin/minikit-react": "^1.9.7",
+    "ethers": "^6.15.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
