--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@worldcoin/minikit-js": "^1.6.0",
     "@worldcoin/minikit-react": "^1.9.7",
     "ethers": "^6.15.0",
+    "ethers-multicall": "^0.2.3",
+    "jsbi": "^4.3.2",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
